--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongodb": "^6.2.0",
     "mongoose": "^6.12.2",
     "nodemailer": "^6.9.1",
+    "path": "^0.12.7",
+    "url": "^0.11.3",
     "validator": "^13.7.0"
   }
 }
